--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,7 @@
 
   <div class="mb-24">
     <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
-      <h1 class="heading">Today</h1>
+      <h1 class="heading">Runs Today</h1>
       <% if @user == current_user && @user.runs_today.any? %>
         <div class="flex items-center justify-end">
           <%= link_to "New run", new_run_path, class: "btn btn-primary" %>
@@ -77,37 +77,30 @@
     </div>
   </div>
 
-  <% runs_this_week = @user.runs_in_date_range(Date.current.beginning_of_week..Date.current).excluding_date(Date.today) %>
-
   <div class="mb-24">
-    <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
-      <h1 class="heading">Runs This Week</h1>
+    <div class="flex flex-wrap gap-6 items-center justify-between mt-10 mb-4 pb-6 border-b border-slate-200 dark:border-slate-700">
+      <h1 class="heading">Filter Runs By Date</h1>
     </div>
-    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <% if runs_this_week.any? %>
-        <% runs_this_week.each do |run| %>
-          <div class="py-3">
-            <%= render run %>
-            <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
-          </div>
-        <% end %>
-      <% else %>
-        <div class="flex flex-col gap-6 items-center justify-center py-12">
-          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user == current_user ? "You haven't gone on any runs yet this week." : "#{@user.display_name.present? ? @user.display_name : @user.username} hasn't gone on any runs yet this week." %></p>
+
+    <%= form_with url: user_path(@user), method: :get, local: true do %>
+      <div class="form-group">
+        <%= label_tag :run_date_range, 'Select date range', class: 'form-label' %>
+
+        <div class="flex items-center gap-6">
+          <%= select_tag :run_date_range, options_for_select(['This week', 'Last week', 'This month', 'Last month'], params[:run_date_range]), class: 'pl-3 pr-8 py-2 border border-slate-300 bg-white font-normal text-base placeholder:text-slate-500 rounded-md block focus:outline-none focus:ring-4 focus:ring-indigo-50 focus:border-indigo-500 text-slate-900 dark:bg-slate-800 dark:border-slate-700 dark:focus:ring-indigo-500/30 dark:focus:border-slate-600 dark:text-white dark:placeholder:text-slate-400 shadow-sm' %>
+          <%= submit_tag 'Apply', class: 'btn btn-primary' %>
         </div>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   </div>
 
-  <% runs_last_week = @user.runs_in_date_range((Date.current - 1.week).beginning_of_week..(Date.current - 1.week)).excluding_date(Date.today) %>
-
   <div class="mb-24">
     <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
-      <h1 class="heading">Runs Last Week</h1>
+      <h1 class="heading"><%= @title %></h1>
     </div>
     <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <% if runs_last_week.any? %>
-        <% runs_last_week.each do |run| %>
+      <% if @runs.any? %>
+        <% @runs.each do |run| %>
           <div class="py-3">
             <%= render run %>
             <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
@@ -115,7 +108,7 @@
         <% end %>
       <% else %>
         <div class="flex flex-col gap-6 items-center justify-center py-12">
-          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user == current_user ? "You didn't go on any runs last week." : "#{@user.display_name.present? ? @user.display_name : @user.username} didn't go on any runs last week." %></p>
+          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No runs found for the selected date range.</p>
         </div>
       <% end %>
     </div>
