--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -103,7 +103,10 @@
         <% @runs.each do |run| %>
           <div class="py-3">
             <%= render run %>
-            <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
+            <div class="flex items-center gap-2">
+              <%= link_to 'View run', run, class: 'btn btn-white btn-sm' if run.comments? %>
+              <%= link_to 'Edit run', edit_run_path(run), class: 'btn btn-primary btn-sm' if @user == current_user %>
+            </div>
           </div>
         <% end %>
       <% else %>
