--- a/app/views/teams/_join_requests.html.erb
+++ b/app/views/teams/_join_requests.html.erb
@@ -1,5 +1,6 @@
-<div class="mt-10 pb-6 border-b dark:border-slate-700">
-  <h1 class="heading"><%= pluralize(join_requests.count, 'Join Request') %></h1>
+<div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
+  <h1 class="heading">Join Requests</h1>
+  <p class="text-slate-700 dark:text-slate-400"><%= pluralize(join_requests.count, 'request') %></p>
 </div>
 
 <% if join_requests.any? %>
