--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -1,5 +1,7 @@
-<div class="flex items-center justify-between flex-wrap gap-y-3">
-  <div>
+<div class="flex items-center flex-wrap gap-4">
+  <%= image_tag team.photo, class: 'size-16 rounded-lg drop-shadow-lg dark:drop-shadow-none' if team.photo.attached? %>
+
+  <div class="mr-auto">
     <p class="subheading mb-0.5"><%= link_to team.name, team, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
     <p class="help-text"><%= link_to team.owner.display_name.present? ? team.owner.display_name : team.owner.username, team.owner, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
     <% if team.season_dates? %>
