--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,12 +1,14 @@
 <div class="max-w-3xl mx-auto px-4 my-16">
   <div class="pb-6 border-b border-slate-200 dark:border-slate-700">
-    <div class="flex flex-wrap gap-6 items-center justify-between">
-      <h1 class="heading">
-        <%= link_to @run.user.display_name.present? ? @run.user.display_name : @run.user.username, @run.user, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
-      </h1>
-      <div class="flex space-x-3">
-        <%= link_to "Edit run", edit_run_path(@run), class: "btn btn-white" %>
-      </div>
+    <div class="flex flex-wrap gap-4 items-center">
+      <%= link_to @run.user, class: 'group flex gap-4 items-center mr-auto' do %>
+        <%= image_tag @run.user.avatar, class: 'size-16 rounded-lg drop-shadow-lg dark:drop-shadow-none' if @run.user.avatar.attached? %>
+        <h1 class="heading mr-auto group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300">
+          <%= @run.user.default_name %>
+        </h1>
+      <% end %>
+
+      <%= link_to "Edit run", edit_run_path(@run), class: "btn btn-white" %>
     </div>
   </div>
   <%= render @run %>
