--- a/app/views/teams/_members.html.erb
+++ b/app/views/teams/_members.html.erb
@@ -6,14 +6,16 @@
   <% members.each do |member| %>
     <div class="py-6">
       <div class="flex gap-4 items-center">
-        <%= image_tag member.avatar, class: 'size-16 rounded-lg drop-shadow-lg dark:drop-shadow-none' if member.avatar.attached? %>
+        <%= link_to member, class: 'group flex gap-4 items-center mr-auto' do %>
+          <%= image_tag member.avatar, class: 'size-16 rounded-lg drop-shadow-lg dark:drop-shadow-none' if member.avatar.attached? %>
 
-        <div class="mr-auto">
-          <h2 class='subheading'><%= link_to member.display_name.present? ? member.display_name : member.username, member, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></h2>
-          <% if member.display_name.present? %>
-            <p class="help-text"><%= member.username %></p>
-          <% end %>
-        </div>
+          <div>
+            <h2 class='subheading group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300'><%= member.default_name %></h2>
+            <% if member.display_name.present? %>
+              <p class="help-text"><%= member.username %></p>
+            <% end %>
+          </div>
+        <% end %>
 
         <div>
           <% if @team.season_dates? %>
