--- a/app/views/teams/_join_request.html.erb
+++ b/app/views/teams/_join_request.html.erb
@@ -1,13 +1,15 @@
 <div class="flex gap-3 items-center flex-wrap py-3 text-slate-800 dark:text-slate-100">
-  <%= image_tag request.user.avatar, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none' if request.user.avatar.attached? %>
+  <%= link_to request.user, class: 'group flex gap-3 items-center mr-auto' do %>
+    <%= image_tag request.user.avatar, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none' if request.user.avatar.attached? %>
 
-  <div class="mr-auto">
-    <p><%= link_to request.user.display_name.present? ? request.user.display_name : request.user.username, request.user, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
-    <% if request.user.display_name.present? %>
-      <p class="help-text"><%= request.user.username %></p>
-    <% end %>
+    <div>
+      <p class="group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300"><%= request.user.default_name %></p>
+      <% if request.user.display_name.present? %>
+        <p class="help-text"><%= request.user.username %></p>
+      <% end %>
+    </div>
+  <% end %>
 
-  </div>
   <div class="flex items-center gap-3">
     <%= button_to 'Approve', approve_request_path(request), method: :patch, class: 'btn btn-sm btn-primary' %>
     <%= button_to 'Reject', reject_request_path(request), method: :patch, class: 'btn btn-sm btn-destructive btn-outline' %>
