--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -3,7 +3,7 @@
     <div class="flex flex-wrap gap-4 items-center">
       <%= link_to @run.user, class: 'group flex gap-4 items-center mr-auto' do %>
         <%= image_tag @run.user.avatar, class: 'size-16 rounded-lg drop-shadow-lg dark:drop-shadow-none' if @run.user.avatar.attached? %>
-        <h1 class="heading mr-auto group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300">
+        <h1 class="heading group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300">
           <%= @run.user.default_name %>
         </h1>
       <% end %>
