--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,87 +48,11 @@
   </div>
 
   <div class="mb-24">
-    <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
-      <h1 class="heading">Runs Today</h1>
-      <% if @user == current_user && @user.runs_today.any? %>
-        <div class="flex items-center justify-end">
-          <%= link_to "New run", new_run_path, class: "btn btn-primary" %>
-        </div>
-      <% end %>
-    </div>
-    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <% if @user.runs_today.any? %>
-        <% @user.runs_today.each do |run| %>
-          <div class="py-3">
-            <%= render run %>
-            <div class="flex items-center gap-2">
-              <%= link_to 'View comments', run, class: 'btn btn-white btn-sm' if run.comments? %>
-              <%= link_to 'Edit run', edit_run_path(run), class: 'btn btn-primary btn-sm' if @user == current_user %>
-            </div>
-          </div>
-        <% end %>
-      <% else %>
-        <div class="flex flex-col gap-6 items-center justify-center py-12">
-          <% if @user == current_user %>
-            <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You haven't gone on any runs yet today.</p>
-            <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
-          <% else %>
-            <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user.default_name %> hasn't gone on any runs yet today.</p>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
+    <%= render 'runs_today', user: @user %>
   </div>
 
-  <div class="mb-24">
-    <div class="flex flex-wrap gap-6 items-center justify-between mt-10 mb-4 pb-6 border-b border-slate-200 dark:border-slate-700">
-      <h1 id="runs_title" class="heading">Filter Runs By Date</h1>
-    </div>
-
-    <%= form_with url: user_path(@user), method: :get, local: true, html: { novalidate: true }, data: { turbo_frame: 'runs', controller: 'custom-date-range form-validation' } do %>
-      <div class="form-group">
-        <%= label_tag :run_date_range, 'Select date range', class: 'form-label' %>
-        <%= select_tag :run_date_range, options_for_select(['This week', 'Last week', 'This month', 'Last month', 'Custom range'], params[:run_date_range]), data: { custom_date_range_target: 'select', action: 'custom-date-range#update' }, class: 'form-select' %>
-      </div>
-
-      <div class="form-group hidden" data-custom-date-range-target="startDate">
-        <%= label_tag :run_start_date, 'Start date', class: 'form-label' %>
-        <%= date_field_tag :run_start_date, nil, max: Date.yesterday, class: 'form-input', data: { form_validation_target: "runStartDate", action: "input->form-validation#validateRunEndDate" } %>
-      </div>
-
-      <div class="form-group hidden" data-custom-date-range-target="endDate">
-        <%= label_tag :run_end_date, 'End date', class: 'form-label' %>
-        <%= date_field_tag :run_end_date, nil, max: Date.today, class: 'form-input', data: { form_validation_target: "runEndDate", action: "input->form-validation#validateRunEndDate" } %>
-        <span class="error-message hidden my-1" data-form-validation-target="runEndDateError">End date must be today or earlier and must be after start date</span>
-      </div>
-
-      <%= submit_tag 'Apply', class: 'btn btn-primary' %>
-    <% end %>
-  </div>
-
-  <div class="mb-24">
-    <%= turbo_frame_tag 'runs' do %>
-      <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
-        <h1 class="heading"><%= @title %></h1>
-      </div>
-      <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-        <% if @runs.any? %>
-          <% @runs.each do |run| %>
-            <div class="py-3">
-              <%= render run %>
-              <div class="flex items-center gap-2">
-                <%= link_to 'View comments', run, class: 'btn btn-white btn-sm' if run.comments? %>
-                <%= link_to 'Edit run', edit_run_path(run), class: 'btn btn-primary btn-sm' if @user == current_user %>
-              </div>
-            </div>
-          <% end %>
-        <% else %>
-          <div class="flex flex-col gap-6 items-center justify-center py-12">
-            <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No runs found for the selected date range.</p>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
+  <div class="mb-24 space-y-24">
+    <%= render 'runs_filter', user: @user %>
   </div>
 </div>
 
