--- a/app/views/users/_runs_today.html.erb
+++ b/app/views/users/_runs_today.html.erb
@@ -1,29 +1,29 @@
 <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
   <h1 class="heading">Runs Today</h1>
-  <% if @user == current_user && @user.runs_today.any? %>
+  <% if user == current_user && user.runs_today.any? %>
     <div class="flex items-center justify-end">
       <%= link_to "New run", new_run_path, class: "btn btn-primary" %>
     </div>
   <% end %>
 </div>
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-  <% if @user.runs_today.any? %>
-    <% @user.runs_today.each do |run| %>
+  <% if user.runs_today.any? %>
+    <% user.runs_today.each do |run| %>
       <div class="py-3">
         <%= render run %>
         <div class="flex items-center gap-2">
           <%= link_to 'View comments', run, class: 'btn btn-white btn-sm' if run.comments? %>
-          <%= link_to 'Edit run', edit_run_path(run), class: 'btn btn-primary btn-sm' if @user == current_user %>
+          <%= link_to 'Edit run', edit_run_path(run), class: 'btn btn-primary btn-sm' if user == current_user %>
         </div>
       </div>
     <% end %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
-      <% if @user == current_user %>
+      <% if user == current_user %>
         <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You haven't gone on any runs yet today.</p>
         <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
       <% else %>
-        <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user.default_name %> hasn't gone on any runs yet today.</p>
+        <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= user.default_name %> hasn't gone on any runs yet today.</p>
       <% end %>
     </div>
   <% end %>
