add tabs to user#show

--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -16,5 +16,5 @@
       <% end %>
     <% end %>
   </div>
-  <%= render 'team_buttons', team: team %>
+  <%= render 'teams/team_buttons', team: team %>
 </div>
