--- a/app/views/users/_user_stats.html.erb
+++ b/app/views/users/_user_stats.html.erb
@@ -1,5 +1,5 @@
 <div class="pb-3 mt-10">
-  <h1 class="heading pb-6">User Stats</h1>
+  <h1 class="heading pb-6">User Info</h1>
   <div class="block sm:flex space-y-8 sm:space-y-0 sm:items-center sm:justify-around">
     <div class='flex flex-col items-center justify-center text-center'>
       <p class='font-semibold text-2xl'>
