--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -19,6 +19,9 @@
       <span>Settings</span>
     <% end %>
 
-    <%= link_to 'New run', new_run_path, aria: { current: current_page?(new_run_path) ? 'page' : nil }, class: 'btn btn-primary mt-auto' %>
+    <%= link_to new_run_path, aria: { current: current_page?(new_run_path) ? 'page' : nil }, class: 'btn btn-lg btn-primary mt-auto flex gap-4 items-center' do %>
+      <%= inline_svg_tag 'icons/runner.svg', class: 'size-6' %>
+      <span>New run</span>
+    <% end %>
   </nav>
 </div>
