--- a/app/views/teams/_edit_settings.html.erb
+++ b/app/views/teams/_edit_settings.html.erb
@@ -19,7 +19,13 @@
         <%= settings_form.check_box :require_gender, { checked: @team.settings(:join_requirements).require_gender, class: 'form-input-checkbox' }, true, false %>
         <%= settings_form.label :require_gender, 'Require gender', class: 'select-none text-sm text-slate-700 dark:text-slate-300' %>
       </div>
-      <p class="help-text my-1">Require users to specify their gender in order to join this team</p>
+      <p class="help-text my-1">Require users to specify their gender in order to join this team.</p>
+    </div>
+
+    <div class="form-group">
+      <%= settings_form.label :max_allowed_requests, 'Maximum allowed requests', class: 'form-label' %>
+      <%= settings_form.number_field :max_allowed_requests, step: 1, min: 1, value: @team.settings(:join_requirements).max_allowed_requests, class: 'form-input' %>
+      <p class="help-text my-1">Choose how many times a user can request to join your team before being blocked.</p>
     </div>
   <% end %>
 
