--- a/app/views/teams/_other_teams.html.erb
+++ b/app/views/teams/_other_teams.html.erb
@@ -1,6 +1,17 @@
-<div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
+<div class="flex flex-wrap gap-6 items-center justify-between pb-6 mb-6 border-b dark:border-slate-700">
   <h1 class="heading">Find Teams</h1>
 </div>
+
+<%= form_with url: teams_path, method: :get, html: { novalidate: true }, data: { turbo_frame: 'otherTeams' } do |form| %>
+  <%= form.label :query, 'Find a team by name:', class: 'sr-only' %>
+
+  <div class="form-group flex items-center gap-6 relative">
+    <%= inline_svg_tag 'icons/search.svg', class: 'size-5 absolute left-3 text-slate-500' %>
+    <%= form.text_field :query, placeholder: 'Team name', class: 'form-input pl-9' %>
+    <%= form.submit 'Search', class: 'btn btn-primary' %>
+  </div>
+<% end %>
+
 <% if other_teams.any? %>
   <%= render 'team_list', teams: other_teams %>
 <% else %>
