--- a/app/views/teams/_other_teams.html.erb
+++ b/app/views/teams/_other_teams.html.erb
@@ -7,7 +7,7 @@
 
   <div class="form-group flex items-center gap-6 relative">
     <%= inline_svg_tag 'icons/search.svg', class: 'size-5 absolute left-3 text-slate-500' %>
-    <%= form.text_field :query, placeholder: 'Team name', data: { action: 'input->search-form#search' }, class: 'form-input pl-9' %>
+    <%= form.search_field :query, placeholder: 'Team name', data: { action: 'input->search-form#search' }, class: 'form-input pl-9' %>
     <%= form.submit 'Search', class: 'btn btn-primary' %>
   </div>
 <% end %>
