--- a/app/views/teams/_members.html.erb
+++ b/app/views/teams/_members.html.erb
@@ -1,38 +1,21 @@
-<div class="flex flex-wrap gap-6 items-center mt-10 pb-6 border-b dark:border-slate-700">
+<div class="flex flex-wrap gap-6 items-center mt-10 mb-6">
   <h1 class="heading">Team Members</h1>
 </div>
 
-<div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-  <% members.each do |member| %>
-    <div class="py-6">
-      <div class="flex gap-4 items-center">
-        <%= link_to member, class: 'group flex gap-4 items-center mr-auto' do %>
-          <%= image_tag member.avatar, class: 'size-16 rounded-lg drop-shadow-lg dark:drop-shadow-none' if member.avatar.attached? %>
+<div class="border-b border-slate-200 dark:border-slate-700">
+  <%= form_with url: team_path(@team), method: :get, html: { novalidate: true }, data: { turbo_frame: 'teamMembers', turbo_action: 'advance', controller: 'search-form' } do |form| %>
+    <%= form.label :query, 'Find a team member by name:', class: 'sr-only' %>
 
-          <div>
-            <h2 class='subheading group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300'><%= member.default_name %></h2>
-            <% if member.display_name.present? %>
-              <p class="help-text"><%= member.username %></p>
-            <% end %>
-          </div>
-        <% end %>
-
-        <div>
-          <% if @team.season_dates? %>
-            <div class="text-center">
-              <p class="font-semibold text-slate-800 dark:text-slate-100 leading-tight"><%= member.miles_this_season(@team) %>
-                <span class="help-text font-normal">miles this season</span>
-              </p>
-            </div>
-          <% end %>
-
-          <% if current_user.owns?(@team) && member != current_user %>
-            <div class="text-right">
-              <%= button_to 'Remove from team', remove_member_path(team_id: @team.id, user_id: member.id), method: :post, class: 'text-xs text-rose-600 font-semibold hover:text-rose-700', data: { confirm: 'Are you sure you want to remove this member?' } %>
-            </div>
-          <% end %>
-        </div>
-      </div>
+    <div class="form-group flex items-center gap-6 relative">
+      <%= inline_svg_tag 'icons/search.svg', class: 'size-5 absolute left-3 text-slate-500' %>
+      <%= form.search_field :query, placeholder: 'Team member name', data: { action: 'input->search-form#search' }, class: 'form-input pl-10' %>
+      <%= form.submit 'Search', class: 'btn btn-primary' %>
     </div>
+  <% end %>
+</div>
+
+<div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+  <%= turbo_frame_tag 'teamMembers' do %>
+    <%= render 'member_list', members: members %>
   <% end %>
 </div>
