--- a/app/views/teams/show.turbo_stream.erb
+++ b/app/views/teams/show.turbo_stream.erb
@@ -1,3 +1,5 @@
 <%= turbo_stream.replace 'teamMembers' do %>
-  <%= render 'member_list', members: @members %>
+  <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+    <%= render 'member_list', members: @members %>
+  </div>
 <% end %>
