--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
+<div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b border-slate-200 dark:border-slate-700">
   <h1 class="heading"><%= user.default_name %>'s Teams</h1>
   <% if user == current_user && owned_teams.any? %>
     <%= link_to 'New team', new_team_path, class: 'btn btn-primary' %>
