--- a/app/views/users/_user_stats.html.erb
+++ b/app/views/users/_user_stats.html.erb
@@ -1,5 +1,7 @@
 <div class="pb-3 mt-10">
-  <h1 class="heading pb-6">User Info</h1>
+  <div class="mt-10 pb-6 mb-6 border-b border-slate-200 dark:border-slate-700">
+    <h1 class="heading">User Info</h1>
+  </div>
   <div class="block sm:flex space-y-8 sm:space-y-0 sm:items-center sm:justify-around">
     <div class='flex flex-col items-center justify-center text-center'>
       <p class='font-semibold text-2xl'>
