--- a/app/views/teams/_edit_settings.html.erb
+++ b/app/views/teams/_edit_settings.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<%= form_with model: @team, url: team_settings_path(@team), local: true, data: { controller: 'restore-defaults' } do |form| %>
+<%= form_with model: @team, url: team_settings_path(@team), local: true, data: { controller: 'restore-defaults team-gender-fields' } do |form| %>
   <!-- Hidden fields to ensure that unchecked checkboxes submit 'false' -->
   <%= hidden_field_tag 'team[settings][require_gender]', 'false' %>
 
@@ -18,7 +18,7 @@
 
     <div class="form-group">
       <div class="flex items-center gap-2">
-        <%= settings_form.check_box :require_gender, { checked: @team.settings(:join_requirements).require_gender, class: 'form-input-checkbox', data: { restore_defaults_target: 'requireGender' } }, true, false %>
+        <%= settings_form.check_box :require_gender, { checked: @team.settings(:join_requirements).require_gender, class: 'form-input-checkbox', data: { restore_defaults_target: 'requireGender', team_gender_fields_target: 'requireGender', action: 'change->team-gender-fields#toggleFields' } }, true, false %>
         <%= settings_form.label :require_gender, 'Require gender', class: 'select-none text-sm text-slate-700 dark:text-slate-300' %>
       </div>
       <p class="help-text my-1">Require users to specify their gender in order to join this team.</p>
@@ -28,6 +28,26 @@
       <%= settings_form.label :max_allowed_requests, 'Maximum allowed requests', class: 'form-label' %>
       <%= settings_form.number_field :max_allowed_requests, step: 1, min: 1, value: @team.settings(:join_requirements).max_allowed_requests, class: 'form-input', data: { restore_defaults_target: 'maxAllowedRequests' } %>
       <p class="help-text my-1">Choose how many times a user can request to join your team before being blocked.</p>
+    </div>
+
+    <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
+      <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Run Settings</h2>
+      <p class="text-sm text-slate-600 dark:text-slate-400">Set the number of miles for a run to count as a "long run".</p>
+    </div>
+
+    <div class="form-group <%= @team.settings(:join_requirements).require_gender ? '' : 'hidden' %>" data-team-gender-fields-target="longRunMale">
+      <%= settings_form.label :long_run_distance_male, 'Male long run distance', class: 'form-label' %>
+      <%= settings_form.number_field :long_run_distance_male, step: 0.1, min: 0.1, value: @team.settings(:runs).long_run_distance_male, class: 'form-input', data: { restore_defaults_target: 'longRunDistanceMale' } %>
+    </div>
+
+    <div class="form-group <%= @team.settings(:join_requirements).require_gender ? '' : 'hidden' %>" data-team-gender-fields-target="longRunFemale">
+      <%= settings_form.label :long_run_distance_female, 'Female long run distance', class: 'form-label' %>
+      <%= settings_form.number_field :long_run_distance_female, step: 0.1, min: 0.1, value: @team.settings(:runs).long_run_distance_female, class: 'form-input', data: { restore_defaults_target: 'longRunDistanceFemale' } %>
+    </div>
+
+    <div class="form-group <%= @team.settings(:join_requirements).require_gender ? 'hidden' : '' %>" data-team-gender-fields-target="longRunNeutral">
+      <%= settings_form.label :long_run_distance_neutral, 'Long run distance', class: 'form-label' %>
+      <%= settings_form.number_field :long_run_distance_neutral, step: 0.1, min: 0.1, value: @team.settings(:runs).long_run_distance_neutral, class: 'form-input', data: { restore_defaults_target: 'longRunDistanceNeutral' } %>
     </div>
   <% end %>
 
